// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard component tests matches snapshot 1`] = `
<Fragment>
  <DashboardSearchInput
    searchQuery={null}
  />
  <div
    className="top-margin"
  >
    <DashboardTrending />
  </div>
</Fragment>
`;

exports[`Dashboard component tests matches snapshot with searchQuery 1`] = `
<Fragment>
  <DashboardSearchInput
    searchQuery="test/searchQuery"
  />
  <div
    className="top-margin"
  >
    <DashboardSearchResult
      searchQuery="test/searchQuery"
    />
  </div>
</Fragment>
`;
